--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,11 +7,7 @@
     padding: 1rem;
 }
 
-.content h1 {
-    margin: 0;
-}
-
-ol.pokemons {
+.pokemons {
     display: grid;
     grid-template-columns: 1fr 1fr;
     list-style: none;
@@ -19,23 +15,55 @@ ol.pokemons {
     margin: 0;
 }
 
-ol.pokemons li {
+.pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
     border-radius: 1rem;
-    background-color: #14A06f;
+    background-color: #49d0b0;
     color: white;
     
 }
 
-ol.pokemons li img {
-    border-style: none;
-    max-width: 100%;
-    height: 118px;
-    align-self: flex-end;
+.pokemon .number {
+    color: #065744;
+    text-align: right;
+    font-size: .625rem;
 }
+
+.pokemon .name {
+    color: white;
+    margin-bottom: 0;
+}
+
+.pokemon .detail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.pokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .types .type {
+    background-color: #a1e6d5;
+    color: white;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+}
+
+.pokemon .detail img{
+    max-width: 100%;
+    height: 70px;
+}
+
 
 
 
